--- a/layer-atlas/build.gradle
+++ b/layer-atlas/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     // Espresso support
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305' // findBugs causing conflicts with Realm
     })
 }
 
